--- a/vignettes/W1-Introduction.Rmd
+++ b/vignettes/W1-Introduction.Rmd
@@ -26,12 +26,12 @@ Date: 7 September, 2015<br />
 Back to [Workshop Outline](Developer-Meeting-Workshop.html)<br />
 
 The material in this document requires _R_ version 3.2 and
-_Bioconductor_ version 3.2
+_Bioconductor_ version 3.1
 
 ```{r configure-test}
 stopifnot(
     getRversion() >= '3.2' && getRversion() < '3.3',
-    BiocInstaller::biocVersion() == "3.2"
+    BiocInstaller::biocVersion() >= "3.1"
 )
 ```
 
