--- a/vignettes/W0-Overview.Rmd
+++ b/vignettes/W0-Overview.Rmd
@@ -27,7 +27,7 @@ _Bioconductor_ version 3.1
 ```{r configure-test}
 stopifnot(
     getRversion() >= '3.2' && getRversion() < '3.3',
-    BiocInstaller::biocVersion() == "3.2"
+    BiocInstaller::biocVersion() >= "3.1"
 )
 ```
 
