--- a/vignettes/M2-Packages-Exercise.Rmd
+++ b/vignettes/M2-Packages-Exercise.Rmd
@@ -89,8 +89,9 @@ Files and directories with structure
     Authors@R: c(
         person("Martin", "Morgan", role="cre",
             email="mtmorgan@roswellpark.org"))
-    Description: Calculates gene set enrichment statistic for
-        weighted gene sets
+    Description: Calculate gene set enrichment statistics for
+        arbitrarily weighted gene sets using Wallenius'
+        noncentral hypergeometric distribution.
     License: Artistic-2.0
     Imports: BiasedUrn
     ```
@@ -129,6 +130,7 @@ Optional
 - data/
 
     - _R_ data objects
+    - Careful! -- bitrot can set in; save only 'base' _R_ data types.
 
 - inst/extdata
 
