--- a/vignettes/M1-Project-Updates.Rmd
+++ b/vignettes/M1-Project-Updates.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 ```
 
 Author: Martin Morgan (<a
-  href="mailto:mtmorgan@fredhutch.org">mtmorgan@fredhutch.org</a>)<br/ >
+  href="mailto:martin.morgan@roswellpark.org">martin.morgan@roswellpark.org</a>)<br/ >
 Date: 8 September, 2015<br />
 This document: https://github.com/Bioconductor/BiocAsiaPacific2015 --> vignettes/M1-Project-Updates.Rmd
 
