--- a/vignettes/W2-Data-Representations.Rmd
+++ b/vignettes/W2-Data-Representations.Rmd
@@ -27,7 +27,7 @@ suppressPackageStartupMessages({
 ```
 
 Author: Martin Morgan (<a
-  href="mailto:mtmorgan@fredhutch.org">mtmorgan@fredhutch.org</a>)<br/ >
+  href="mailto:martin.morgan@roswellpark.org">martin.morgan@roswellpark.org</a>)<br/ >
 Date: 7 September, 2015<br />
 Back to [Workshop Outline](Developer-Meeting-Workshop.html)<br />
 
