--- a/vignettes/BioconductorSlides.sty
+++ b/vignettes/BioconductorSlides.sty
@@ -1,7 +1,7 @@
 \usepackage{Sweave}
 \usepackage{color, graphics}
 \usepackage{latexsym, amsmath, amssymb}
-
+\hypersetup{urlcolor=blue, colorlinks=true}
 %% simple macros
 \newcommand{\software}[1]{\textsl{#1}}
 \newcommand\R{\textsl{R}}
